Finished lab 3/3 AP

--- a/AP/Lab_3/project_1/app/templates/delivery_detail.html
+++ b/AP/Lab_3/project_1/app/templates/delivery_detail.html
@@ -16,7 +16,7 @@
     <p><strong class="data">Product id:</strong> <span class="data">{{ delivery.order.product.id }}</span></p>
     <p><strong class="data">Product name</strong> <span class="data">{{ delivery.order.product.name }}</span></p>
     <p><strong class="data">Product price</strong> <span class="data">{{ delivery.order.product.price }}</span></p>
-    <p><strong class="data">Product amount:</strong> <span class="data">{{ delivery.order.product.amout }}</span></p>
+    <p><strong class="data">Product amount:</strong> <span class="data">{{ delivery.order.product.amount }}</span></p>
     <p><strong class="data">Total price:</strong> <span class="data">{{ delivery.order.total_price }}</span></p>
     <p><strong class="data">Date time:</strong> <span class="data">{{ delivery.order.date_time }}</span></p>
     <p><strong class="data">Order id:</strong> <span class="data">{{ delivery.order.id }}</span></p>
