--- a/AP/Lab_3/project_1/app/templates/home.html
+++ b/AP/Lab_3/project_1/app/templates/home.html
@@ -15,6 +15,7 @@
         <li><a href="{% url 'Orders list' %}">Orders</a></li>
         <li><a href="{% url 'Discounts list' %}">Discounts</a></li>
         <li><a href="{% url 'Deliveries list' %}">Deliveries</a></li>
+        <li><a href="{% url 'Users list nh' %}">Network Helper 'users'</a></li>
     </ul>
 
 </body>
