--- a/AP/Lab_3/project_1/app/templates/users.html
+++ b/AP/Lab_3/project_1/app/templates/users.html
@@ -33,7 +33,7 @@
         </div>
         
         <div>
-            <label class = 'data'for="phone_number">Phone number:</label>
+            <label class = 'data'for="phone_number">Phone number(13):</label>
             <input class = '_input'  type="text" name="phone_number" id="phone_number" required>
         </div>
         
