--- a/AP/Lab_3/project_1/app/templates/aggreg/user_with_tot.html
+++ b/AP/Lab_3/project_1/app/templates/aggreg/user_with_tot.html
@@ -9,15 +9,41 @@
 </head>
 <body>
     <h1>Users Total Spent:</h1>
-    <ul>
-        {% for user in users %}
-            <li class="data">
-                <strongs>{{ user.user__first_name }} {{ user.user__last_name }}</strong>
-                with total spent: {{ user.total_spent }} 
-            </li>
-        {% endfor %}
-    </ul>
+    
+    <center>
+        <table border="1">
+            <thead>
+                <tr class="data">
+                    <th>Index</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Total Spent</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                    <tr class="data">
+                        <td align="center">{{ user.index }}</td>
+                        <td align="center">{{ user.user__first_name }}</td>
+                        <td align="center">{{ user.user__last_name }}</td>
+                        <td align="center">{{ user.total_spent }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </center>
+    <br>
+    <div class="statistics" class="data">
+        <h3>Statistics:</h3>
+        <p><strong>Max:</strong> {{ stats.max|floatformat:2 }}</p>
+        <p><strong>Min:</strong> {{ stats.min|floatformat:2 }}</p>
+        <p><strong>Avg:</strong> {{ stats.avg|floatformat:2 }}</p>
+        <p><strong>Median:</strong> {{ stats.median|floatformat:2 }}</p>
+    </div>
+
     <br>
     <a href="{% url 'Aggreg requests' %}" class="back_link">Back to Requests</a>
+
 </body>
 </html>
+
