--- a/AP/Lab_3/project_1/app/templates/aggreg/ord_rev_over.html
+++ b/AP/Lab_3/project_1/app/templates/aggreg/ord_rev_over.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -9,15 +10,40 @@
 </head>
 <body>
     <h1>Orders with Revenue Over 500:</h1>
-    <ul>
-        {% for order in orders %}
-            <li class="data">
-                <strong>{{ order.user__first_name }} {{ order.user__last_name }}</strong>
-                with total revenue: {{ order.total_price }} 
-            </li>
-        {% endfor %}
-    </ul>
+    <center>
+        <table border="1">
+            <thead>
+                <tr class="data">
+                    <th>Index</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Total Revenue</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for order in orders %}
+                    <tr class="data">
+                        <td align="center">{{ order.index }}</td>
+                        <td align="center">{{ order.user__first_name }}</td>
+                        <td align="center">{{ order.user__last_name }}</td>
+                        <td align="center">{{ order.total_spent }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </center>
+
+    <br>
+    <div class="statistics" class="data">
+        <h3>Statistics:</h3>
+        <p><strong>Max:</strong> {{ stats.max|floatformat:2 }}</p>
+        <p><strong>Min:</strong> {{ stats.min|floatformat:2 }}</p>
+        <p><strong>Avg:</strong> {{ stats.avg|floatformat:2 }}</p>
+        <p><strong>Median:</strong> {{ stats.median|floatformat:2 }}</p>
+    </div>
+
     <br>
     <a href="{% url 'Aggreg requests' %}" class="back_link">Back to Requests</a>
 </body>
 </html>
+
