--- a/AP/Lab_3/project_1/app/templates/general/aggreg_requests.html
+++ b/AP/Lab_3/project_1/app/templates/general/aggreg_requests.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Aggregational requests</h1>
     <ul>
-        <li><a href="{% url 'Deliveries due to order' %}">Delivery info by order with total value above 500</a></li>
+        <li><a href="{% url 'Deliveries due to order' %}">Delivery info by order expenses above 500</a></li>
         <li><a href="{% url 'Users with total' %}">Users total spent</a></li>
         <li><a href="{% url 'Top products' %}">Top products</a></li>
         <li><a href="{% url 'Users with discount' %}">Users with discount orders</a></li>
