--- a/AP/Lab_3/project_1/app/templates/aggreg/deliv_due_to_ord.html
+++ b/AP/Lab_3/project_1/app/templates/aggreg/deliv_due_to_ord.html
@@ -46,7 +46,7 @@
     </div>
     <br>
     <h1>Average Expenses by Country</h1>
-    <center></center>
+    <center>
     <table border="1">
         <thead>
             <tr class="data">
@@ -67,6 +67,9 @@
     <br>
     <br>
     <a href="{% url 'Delivery dashboard v1' %}" class="back_link">Go to dasboard V1</a>
+    <br>
+    <br>
+    <a href="{% url 'Delivery dashboard v2' %}" class="back_link">Go to dasboard V2</a>
     <br>
     <br>
     <a href="{% url 'Aggreg requests' %}" class="back_link">Back to Requests</a>
