--- a/AP/Lab_3/project_1/app/templates/aggreg/user_with_disc.html
+++ b/AP/Lab_3/project_1/app/templates/aggreg/user_with_disc.html
@@ -68,6 +68,9 @@
     <a href="{% url 'User dashboard v1' %}" class="back_link">Go to dashboard V1</a>
     <br>
     <br>
+    <a href="{% url 'User dashboard v2' %}" class="back_link">Go to dashboard V2</a>
+    <br>
+    <br>
     <a href="{% url 'Aggreg requests' %}" class="back_link">Back to Requests</a>
 
 </body>
