--- a/AP/Lab_3/project_1/app/templates/dashboard/delivery/dashboard_v2.html
+++ b/AP/Lab_3/project_1/app/templates/dashboard/delivery/dashboard_v2.html
@@ -36,10 +36,10 @@
     </center>
     </div>
     <br><br>
-    <div id="scatter-chart">
+    <div id="pie-chart">
     `<center>
-        {{ scatter_div|safe }}    
-        {{ scatter_script|safe }}
+        {{ pie_div|safe }}    
+        {{ pie_script|safe }}
     </center>
     </div>
     <br><br>
