--- a/AP/Lab_3/project_1/app/templates/dashboard/user/dashboard_v2.html
+++ b/AP/Lab_3/project_1/app/templates/dashboard/user/dashboard_v2.html
@@ -28,10 +28,10 @@
     </center>
     </div>
     <br><br>
-    <div id="scatter-chart">
-    `<center>
-        {{ scatter_div|safe }}    
-        {{ scatter_script|safe }}
+    <div id="pie-chart">
+    <center>
+        {{ pie_div|safe }}    
+        {{ pie_script|safe }}
     </center>
     </div>
     <br><br>
