--- a/AP/Lab_3/project_1/app/templates/general/aggreg_requests.html
+++ b/AP/Lab_3/project_1/app/templates/general/aggreg_requests.html
@@ -10,12 +10,12 @@
 <body>
     <h1>Aggregational requests</h1>
     <ul>
-        <li><a href="{% url 'Deliveries due to order' %}">Delivery info with order expenses above 500</a></li>
+        <li><a href="{% url 'Deliveries due to order' %}">Delivery info with order expenses above</a></li>
         <li><a href="{% url 'Users with total' %}">Users total spent</a></li>
         <li><a href="{% url 'Top products' %}">Top products</a></li>
         <li><a href="{% url 'Users with discount' %}">Users with discounted orders</a></li>
-        <li><a href="{% url 'Orders revenue over' %}">Orders with revevnue over 500</a></li>
-        <li><a href="{% url 'Products discount above' %}">Products with discount above 10%</a></li>
+        <li><a href="{% url 'Orders revenue over' %}">Orders with revevnue over</a></li>
+        <li><a href="{% url 'Products discount above' %}">Products with discount above</a></li>
         <br>
         <li><a href="{% url 'Home' %}">Back to home</a></li>
     </ul>
